Add DIV background-color changing on mouseover

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    <div id="container" class="main-container">
+    <div id="container" class="canvas-container">
         
     </div>
 </body>
